# uvicorn-fastapi-example

./: .pre-commit-config.yaml  README.md  environment.yaml  pyproject.toml  requirements.txt
app/: main.py
tests/: conftest.py  test_api_endpoints.py
