[tool.poetry]
name = "uvicorn-fastapi-example"
version = "0.1.0"
description = "uvicorn-fastapi-example"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.97.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
httpx = "^0.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
coverage = "^7.2.7"
black = "^23.3.0"
requests = "^2.31.0"
pre-commit = "^3.3.2"
conda-lock = "^2.0.0"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.black]
line-length = 80
target-version = ["py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
